[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.3.0"
edition = "2021"
publish = false

[package]
name = "app-pulse-bot"
version.workspace = true
edition.workspace = true
publish.workspace = true

[package.metadata.bot]
# using this for storing version in db
# this value is reading in crates/common/build.rs
version = 0

[features]
prod = []
test-prod = []

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bon = "3.3.2"
camino = "1.1.6"
chrono = "0.4.31"
dotenvy_macro = "0.15.7"
fluent = "0.16.0"
fluent-syntax = "0.11.0"
heck = "0.5.0"
intl-memoizer = "0.5.1"
log = { version = "0.4.21", features = ["kv"] }
once_cell = "1.18.0"
proc-macro2 = "1"
quote = "1"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
simplelog = "0.12.1"
sqlx = { version = "0.8.3", features = ["macros",  "migrate", "runtime-tokio",  "sqlite",  "tls-rustls"] }
syn = "2"
teloxide = { version = "0.13.0", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
thiserror = "2.0.9"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
toml = "0.8.8"
unic-langid = { version = "0.9.1", features = ["macros"] }

bot-handlers = { path = "crates/bot-handlers" }
common = { path = "crates/common" }
db = { path = "crates/db" }
i18n = { path = "crates/i18n" }
interly = { path = "crates/interly" }
interly-macros = { path = "crates/interly-macros" }
sources = { path = "crates/sources" }

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dotenvy_macro.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
simplelog.workspace = true
teloxide.workspace = true
tokio.workspace = true
tokio-util.workspace = true

bot-handlers.workspace = true
common.workspace = true
db.workspace = true
i18n.workspace = true
sources.workspace = true

[profile.release]
strip = true

[profile.dev.package."*"]
opt-level = 3
