[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.3.0"
edition = "2021"
publish = false

[package]
name = "app-pulse-bot"
version.workspace = true
edition.workspace = true
publish.workspace = true

[package.metadata.bot]
# using this for storing version in db
# this value is reading in crates/common/build.rs
version = 0

[features]
prod = []
test-prod = []

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
bon = "3.3.2"
camino = "1.1.9"
chrono = "0.4.39"
dotenvy_macro = "0.15.7"
fluent = "0.16.1"
fluent-syntax = "0.11.1"
heck = "0.5.0"
intl-memoizer = "0.5.2"
log = { version = "0.4.24", features = ["kv"] }
once_cell = "1.20.2"
opensearch = { version = "2.3.0", default-features = false, features = ["rustls-tls"] }
paste = "1.0.15"
proc-macro2 = "1"
quote = "1"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
similar-asserts = "1.6.0"
simplelog = "0.12.2"
sqlx = { version = "0.8.3", features = ["macros", "migrate", "runtime-tokio", "sqlite", "tls-rustls"] }
sqlx_migrator = { version = "0.16.2", features = ["sqlite"] }
syn = { version = "2", features = ["printing"] }
teloxide = { version = "0.13.0", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
toml = "0.8.19"
unic-langid = { version = "0.9.5", features = ["macros"] }

bot-handlers = { path = "crates/bot-handlers" }
common = { path = "crates/common" }
db = { path = "crates/db" }
i18n = { path = "crates/i18n" }
interly = { path = "crates/interly" }
interly-macros = { path = "crates/interly-macros" }
macros = { path = "crates/macros" }
sources = { path = "crates/sources" }

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dotenvy_macro.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
simplelog.workspace = true
teloxide.workspace = true
tokio.workspace = true
tokio-util.workspace = true

bot-handlers.workspace = true
common.workspace = true
db.workspace = true
i18n.workspace = true
sources.workspace = true

[profile.release]
strip = true

[profile.dev.package."*"]
opt-level = 3
