[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.3.0"
edition = "2021"
publish = false

[package]
name = "app-pulse-bot"
version.workspace = true
edition.workspace = true
publish.workspace = true

[package.metadata.bot]
# using this for storing version in db
# this value is reading in crates/common/build.rs
version = 0

[features]
prod = []
test-prod = []

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bon = "3.8.2"
camino = "1.2.2"
chrono = "0.4.42"
dotenvy_macro = "0.15.7"
fluent = "0.17.0"
fluent-syntax = "0.12.0"
heck = "0.5.0"
intl-memoizer = "0.5.3"
log = { version = "0.4.29", features = [ "kv" ] }
once_cell = "1.21.3"
proc-macro2 = "1"
quote = "1"
reqwest = { version = "=0.12.28", default-features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
simplelog = "0.12.2"
sqlx = { version = "0.8.6", features = [ "macros", "migrate", "runtime-tokio", "sqlite", "tls-rustls" ] }
syn = "2"
teloxide = { version = "0.17.0", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = [ "full" ] }
tokio-util = "0.7.18"
toml = "0.9.11"
unic-langid = { version = "0.9.6", features = [ "macros" ] }

bot-handlers = { path = "crates/bot-handlers" }
common = { path = "crates/common" }
db = { path = "crates/db" }
i18n = { path = "crates/i18n" }
interly = { path = "crates/interly" }
interly-macros = { path = "crates/interly-macros" }
sources = { path = "crates/sources" }

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dotenvy_macro.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
simplelog.workspace = true
teloxide.workspace = true
tokio.workspace = true
tokio-util.workspace = true

bot-handlers.workspace = true
common.workspace = true
db.workspace = true
i18n.workspace = true
sources.workspace = true

[profile.release]
strip = true

[profile.dev.package."*"]
opt-level = 3
