[package]
name = "common"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
dotenvy_macro.workspace = true
log.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[build-dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
