[package]
name = "db"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
bon.workspace = true
log.workspace = true
sqlx.workspace = true
teloxide.workspace = true
thiserror.workspace = true

common.workspace = true
i18n.workspace = true

[dev-dependencies]
tokio.workspace = true
