[package]
name = "db"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
bon.workspace = true
log.workspace = true
paste.workspace = true
sqlx.workspace = true
sqlx_migrator.workspace = true
teloxide.workspace = true
thiserror.workspace = true

common.workspace = true
i18n.workspace = true

[dev-dependencies]
tokio.workspace = true
