[package]
name = "interly-macros"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
camino.workspace = true
fluent.workspace = true
fluent-syntax.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
unic-langid.workspace = true
