[package]
name = "interly"
description = "Internalization unified"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
fluent.workspace = true
intl-memoizer.workspace = true
once_cell.workspace = true
unic-langid.workspace = true

interly-macros.workspace = true
